--- a/style.css
+++ b/style.css
@@ -1,37 +1,90 @@
-.header{
-  background:url(img/paysage.jpg) no-repeat center center;
-	padding:55px 0 380px;
-	text-align:left;
-	background-size:cover;
+body {
+  font-family: 'Open Sans', sans-serif;
+}
 
+.header {
+  background: url(img/paysage.jpg) no-repeat center center;
+  padding: 55px 0 380px;
+  text-align: left;
+  background-size: cover;
 }
-.projects{
-  background-color: #FF915E;
+
+.projects {
+  background-color: #FFF;
 }
-.second-box{
+
+.second-box {
   background-color: #E0594A;
 }
-.patchwork{
-  border: 1px dotted black;
+
+.patchwork {
+  /* border: 1px dotted black; */
 }
-.design{
-  background-color: #F0633E;
+
+#ipone {
+  display: block;
+  margin-top: -550px;
+  margin-bottom: 80px;
+  width: 100%;
 }
-.built{
-  background-color: #8A6676;
+
+#titlepic {
+  width: auto;
+  margin-top: 20%;
+  margin-left: 15%;
+  float: left;
 }
-.clients{
+
+#picperf {
+  font-size: 60px;
+}
+
+#pictext {
+  font-size: 15px;
+}
+
+.col {
+  color: #959595;
+}
+
+.design {
+  background-color: #f5999e;
+}
+
+.built {
+  background-color: #625f7e;
+}
+
+.clients {
   background-image: url(img/1.png);
 }
-.great{
-  background-color: #D38EA5;
+
+.great {
+  background-color: #bc8cbe;
 }
-.sign_up{
+
+.sign_up {
   background-image: url(img/2.jpg);
 }
-.pictures{
-  background-color: #009B38;
+
+.pictures {
+  background-color: #82ca9c;
 }
-.something_new{
+
+.something_new {
   background-image: url(img/3.jpg);
+}
+
+#cards-right{
+  margin-left: 16rem;
+}
+
+.custom-btn{
+  background-color: rgba(255, 255, 255, 0);
+  border: 0;
+}
+.custom-btn:hover{
+  background-color: rgba(255, 255, 255, 1);
+  color:rgba(0, 0, 0, 1);
+  border: 0;
 }
