Parallax Effect added on header

--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
   padding: 55px 0 380px;
   text-align: left;
   background-size: cover;
+  background-attachment: fixed;
+
 }
 
 .projects {
