mouse:hover was modified on section products

--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@ body {
 
 .clients {
   background-image: url(img/1.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .great {
@@ -104,8 +106,13 @@ display: inline-block;
 color: #fff;
 font-weight: 700;
 }
-.purple-bg:hover{
-background: #bb8dc2 !important;
+.purple-bg
+{
+transition: background 300ms;
+}
+.nocolor:hover .purple-bg
+{
+background: #BB8DC2 !important;
 }
 
 /*second-box*/
@@ -113,7 +120,7 @@ background: #bb8dc2 !important;
   background-image: url(img/voiture.jpg);
   background-size: cover;
   background-attachment: fixed;
-  position:relative
+  position:relative;
 }
 
 #bottom-position{
@@ -195,4 +202,9 @@ h5{
     display: inline-block;
     border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
+}
+
+/* tablettes et smartphones */
+@media screen and (max-width: 768px){
+
 }
