--- a/login.css
+++ b/login.css
@@ -1,5 +1,10 @@
 body{
     background-image: url(img/paysage_blur.jpg);
+    background-repeat: no-repeat;
+    height: 78%;
+    background-position: center;
+    background-size: cover;
+
 
 
 }
@@ -18,6 +23,7 @@ form {
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     border-radius: 1.2rem;
     font-family: fantasy;
+
 
 }
 #container h1{
