--- a/article.css
+++ b/article.css
@@ -3,8 +3,15 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    background-attachment: fixed;
+
 }
 
 .article {
-  background-color: grey;
+  width:100%;
+  padding: 30px;
+  border: 1px solid #f1f1f1;
+  background:rgba(255,255,255, 0.8);
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  border-radius: 1.2rem;
 }
