--- a/article.css
+++ b/article.css
@@ -15,3 +15,8 @@ body{
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
   border-radius: 1.2rem;
 }
+
+img {
+  width:100%;
+  max-width:500px;
+}
