--- a/login.css
+++ b/login.css
@@ -51,6 +51,8 @@ input[type=submit] {
     border: none;
     cursor: pointer;
     width: 100%;
+    border-radius: 1.2rem;
+
 }
 input[type=submit]:hover {
     background-color: white;
