--- a/backoffice.CSS
+++ b/backoffice.CSS
@@ -8,6 +8,9 @@ body {
     font-family: 'Poppins', sans-serif;
     background: #fafafa;
 }
+.table1 td {
+  font-size: 0.5em;
+}
 h1{
   color:black;
 }
