--- a/backoffice.CSS
+++ b/backoffice.CSS
@@ -134,4 +134,11 @@ ul ul a {
 .filepond--drip-blob {
 	background-color: #7f8a9a;
 }
-/*******************
+
+.deco_bouton {
+  background-color: white;
+  color : #7386d5;
+  text-align: center;
+  border-radius: 1.5rem;
+  justify-items: flex-end;
+}
